@@ -1,4 +1,4 @@
-.\"	$NetBSD: envstat.8,v 1.42 2008/04/17 20:51:48 xtraeme Exp $
+.\"	$NetBSD: envstat.8,v 1.43 2008/04/22 22:37:13 cegger Exp $
 .\"
 .\" Copyright (c) 2000, 2007, 2008 The NetBSD Foundation, Inc.
 .\" All rights reserved.
@@ -163,6 +163,7 @@ file:
 .Xr adt7463c 4 ,
 .Xr adt7467c 4 ,
 .Xr aiboost 4 ,
+.Xr amdtemp 4 ,
 .Xr aps 4 ,
 .Xr arcmsr 4 ,
 .Xr battery_pmu 4 ,
